--- a/front/src/component/game/App.css
+++ b/front/src/component/game/App.css
@@ -17,7 +17,8 @@
 .App {
 	background: linear-gradient(225deg, var(--dark-blue) 0%, var(--blue) 100%);
 	display: flex;
-	height: 100vh;
+	height: 45vw;
+	width: 100%;
 	flex-direction: column;
 }
 
