--- a/front/src/component/modes/index.scss
+++ b/front/src/component/modes/index.scss
@@ -17,6 +17,26 @@
 
 }
 
+.search-box-invite::placeholder{
+    font-family: Myfont_r;
+    color: var(--lightBlue);
+    font-size: 0.6vw;
+    position: relative;
+    // top: 5%;
+}
+
+.search-box-invite{
+    background-color: var(--blue);
+    border-radius: 3vw;
+    color: var(--lightBlue);
+    padding: 0.5%;
+    padding-left: 4%;
+    font-family: Myfont_r;
+    font-size: 0.6vw;
+    outline: none;
+    box-shadow: 0.3vw 0.3vw 0.2vw 0 rgba(0, 0, 0, 0.25) inset;
+}
+
 .container-mode{
     position: relative;
     height: 95%;
@@ -81,3 +101,9 @@
     z-index: 100 !important;
     outline: none !important;
 }
+
+.ReactModal__content {
+    
+    outline: none !important;
+}
+
