--- a/front/src/component/header/index.scss
+++ b/front/src/component/header/index.scss
@@ -1,7 +1,7 @@
 @import url("../tools/fonts.scss");
 .header-{
-    height: 5vw;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
