--- a/front/src/component/chat/Rooms/styleRoom.module.css
+++ b/front/src/component/chat/Rooms/styleRoom.module.css
@@ -21,6 +21,12 @@
     font-family: Myfont_r;   
 }
 
+.searchShadow
+{
+  box-shadow:
+    0.833vw 0.667vw 0.917vw 0vw rgba(0, 0, 0, 0.25) inset,
+    0.417vw 0.667vw 0.833vw 0vw rgba(29, 53, 87, 0.48);
+}
 
 
 .frame::-webkit-scrollbar:vertical {
