--- a/front/src/component/home/index.scss
+++ b/front/src/component/home/index.scss
@@ -47,7 +47,7 @@
 .boy{
     position: absolute;
     height: 22vw;
-    top: -5%;
+    top: -10%;
     right: -5%;
 }
 
@@ -56,7 +56,7 @@
     border-radius: 1.7vw;
     box-shadow: 1vw 1.3vh 1.3vw  #09121F;
     align-items: center;
-    align-self: flex-start;
+    align-self: flex-end;
     position: relative;
     top: 45%;
     left: -22.5%;
@@ -94,7 +94,6 @@
 
 .pos{
     border-radius: 1.7vw;
-    min-width: 36vw;
 }
 
 
@@ -139,19 +138,4 @@
     height: 100%;
     justify-content: center;
     align-self: center;
-}
-
-
-@media(max-width: 900px){
-    
-    .title{
-        text-align: start;
-        position: relative;
-    }
-    .Welcom_title{
-        // left: 10%;
-    }
-    .boy{
-        right: 10%;
-    }
 }
